[chromium] Root layer is not updated when only a portion of tile is updated https://bugs.webkit.org/show_bug.cgi?id=66506

This only happened in the accelerated path which changes stencil state.
Incorrect stencil state was used to draw the root layer.

Reviewed by James Robinson.

Test: compositing/overflow/overflow-scroll.html (existing)

* platform/graphics/chromium/LayerRendererChromium.cpp:
(WebCore::LayerRendererChromium::drawLayersInternal):
* platform/graphics/chromium/LayerTextureUpdaterCanvas.cpp:
(WebCore::LayerTextureUpdaterSkPicture::updateTextureRect):


Canonical link: https://commits.webkit.org/82682@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93727 268f45cc-cd09-0410-ab3c-d52691b4dbfc